Cambios en participante proyecto